# LLMAgentProtector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: ppa_defense_demo.py
llm_agent_protector/: __init__.py  polymorphic_prompt_assembler.py
llmagentprotector/: __init__.py  polymorphic_prompt_assembler.py  setup.py
python-sdk/: config.py  llm_utils.py  polymorphic_prompt_assembler.py  test.py
python-sdk/ppa_demo/: ppa_defense_demo.py
python-sdk/ppa_demo/results/: ppa_demo_summary.json
python-sdk/separator_evolution/: README.md  genetic_separator_script.py  load_good_separators.py
python_sdk/: config.py  polymorphic_prompt_assembler.py  test_double_prompt.py  test_single_prompt.py
separator_generator/: genetic_separator_script.py
separator_generator/results/: round_2_result.json  round_statistic_1.json  round_statistic_2.json
tests/: dry_test.py  test_double_prompt.py  test_single_prompt.py
utils/: attack_utils.py  llm_utils.py
